version 1.9.2, in progress
- 

2010-06-24 version 1.9.1
- New command: "makepkg", for command-line creation of gretl
  function packages (.gfn files)
- pdf, cdf and pvalue functions: add support for the
  Generalized Error distribution
- "dataset" command: add new sub-command, "renumber", for
  moving a series to a new position
- wls: amend the criterion for complaining that the weights
  are all zero
- logit/probit: correct ordering of estimates when the
  constant is not first in the supplied list of regressors
- Reading gdt data files: don't stop if a denormalized tiny
  value is found: accept what the C library gives and ignore
  errno
- Reinstate --basque start-up option for GUI program
- Fix for printing of month names on time-series plots in
  locales with multi-byte characters
- OS X: use the native Mac calculator app for gretl's
  calculator toolbar item by default
- GUI: add mechanism for defining named lists, and for
  setting the main window selection from a chosen list
- GUI: "Edit attributes" (of series) dialog: add option
  to change the position of a series in the dataset
- GUI model selection dialog: implement re-ordering of
  regressors via right-click
- GUI, right-click popup in main window: on selecting the
  correlation matrix option, give the user a chance to
  insist on a uniform sample for the correlations
- Internals: new, improved code for calulating the inverse
  Mills ratio (probit, heckit)
- API documentation: take this a step further, though it's
  still radically incomplete
- Remove the old genpois function

2010-05-02 version 1.9.0
- New command: "duration", for estimation of parametric
  duration models (e.g. Weibull)
- New command: "negbin", for estimation of count data
  models using the Negative Binomial distribution
- poisson regression: add overdispersion test and also
  --robust option to get a QML covariance matrix
- New command modifier, "catch" to catch errors and
  permit continuation of script execution